# attension-mahjong

./: .gitignore  AGENTS.md  README.md  README_ja.md  prompt.txt  pyproject.toml
configs/: default.yaml  eval_backtest.yaml
data/sample_kifus/: synthetic_games.yaml
src/mahjong_attn_ai/: __init__.py  cli.py
src/mahjong_attn_ai/dataio/: __init__.py  dataset.py  parser.py  schema.py
src/mahjong_attn_ai/env/: __init__.py  simulator_stub.py
src/mahjong_attn_ai/eval/: __init__.py  backtest.py  kpi.py  simple_bots.py
src/mahjong_attn_ai/features/: __init__.py  encoders.py  legal_mask.py  utils.py
src/mahjong_attn_ai/models/: __init__.py  heads.py  transformer.py
src/mahjong_attn_ai/training/: __init__.py  metrics.py  rl_stub.py  sl_trainer.py
tests/: test_backtest_api.py  test_encoding.py  test_forward_shapes.py  test_legal_mask.py
